refactor(الاحتفاظ باخر نسخه قبل التعديل الكبير)ط

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -446,6 +446,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   [data-app] .card, [data-app] .card-body, [data-app] .card-header {
     background:#fff!important; border:1px solid #ccc!important; box-shadow:none!important;
   }
+
+  .no-print{
+    display: none !important;
+  }
 }
 
 
